pkg/fixtures/manifests/ingress/ingress-simple.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
  name: "test-ingress"
  namespace: "default"
  labels:
    app.kubernetes.io/name: test-ingress
    app.kubernetes.io/part-of: test-app
    kubernetes.azure.com/generator: draft
spec:
  ingressClassName: nginx
  rules:
    - host: "test-host.com"
      http:
        paths:
          - backend:
              service:
                name: "test-service"
                port:
                  number: 80
            path: "/"
            pathType: Prefix
