pkg/fixtures/manifests/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
        kubernetes.azure.com/tls-cert-keyvault-managed: "true" 
        kubernetes.azure.com/tls-cert-keyvault-uri: "test.uri"
  name: "test-ingress"
  namespace: "default"
  labels:
    app.kubernetes.io/name: test-ingress
    app.kubernetes.io/part-of: test-app
    kubernetes.azure.com/generator: draft
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - host: "test-host.com"
      http:
        paths:
          - backend:
              service:
                name: "test-service"
                port:
                  number: 80
            path: "/test/path"
            pathType: Prefix
  tls:
    - hosts:
        - "test-host.com"
      secretName: "keyvault-test-service"
